--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "process-list",
+  "name": "@amdglobal/process-list",
   "version": "1.2.3",
   "description": "Cross-platform method to receive the list of the launched processes",
   "main": "index.js",
@@ -44,7 +44,7 @@
   },
   "dependencies": {
     "bindings": "^1.3.0",
-    "nan": "^2.10.0",
+    "nan": "^2.14.0",
     "pify": "^3.0.0",
     "prebuild-install": "^4.0.0"
   },
